genium/src/test/resources/examples/errors/output/lime/examples/Errors.lime
package examples

class Errors {
    enum InternalErrors {
        NONE,
        CRASHED,
        EXPLODED
    }

    exception InternalErrorsException(InternalErrors)

    static fun startSomethingOrFail() throws InternalErrorsException
    static fun getSomethingOrFail(): String throws InternalErrorsException
}
